test/fail/errors/ClashingImport.agda
module ClashingImport where

X = TODO--Can't-make-this-happen!

postulate A : Set

import Imports.A
open Imports.A

